--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/vite": "^4.1.5",
     "chart.js": "^4.4.9",
     "chartjs-plugin-annotation": "^3.1.0",
+    "lucide-react": "^0.441.0",
+    "framer-motion": "^11.3.21",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
